name:                timed-repeating
version:             0.1
synopsis:            Repeat actions every hour, useful in scraping
homepage:            https://github.com/Tarrasch/timed-repeating
bug-reports:         https://github.com/Tarrasch/timed-repeating/issues
license:             BSD3
license-file:        LICENSE
author:              Arash Rouhani
maintainer:          miffoljud@gmail.com
category:            Concurrency
build-type:          Simple
stability:           experimental
cabal-version:       >=1.2

library
  exposed-modules:
                   Control.Concurrent.TimedRepeating

  build-depends:   base >= 4       && < 5
                  

  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/hamlet.gi
